
Table users {
  id integer [pk, increment]
  email text [unique, not null]
  full_name text
  avatar_url text
  class text
  school text
  self_description text [default: ""]
}


Table topics {
  id integer [pk, increment]
  name text [not null]
  description text
}


Table lessons {
  id integer [pk, increment]
  topic_id integer [not null, ref: > topics.id]
  title text [not null]
  content text
  video_url text
  short_describe text
}


Table exams {
  id integer [pk, increment]
  name text [not null]
  year integer
  province text
  topic_id integer [ref: > topics.id]
  rating integer [note: '1-5', note: 'CHECK (rating BETWEEN 1 AND 5)']
  student_attempt integer [default: 0]
  correct_attempt integer [default: 0]
  added_on date [default: `CURRENT_DATE`]
}


Table questions {
  id integer [pk, increment]
  exam_id integer [not null, ref: > exams.id]
  topic_id integer [not null, ref: > topics.id]
  content text [not null]
  type text [not null, note: 'single or multiple']
}


Table answers {
  id integer [pk, increment]
  question_id integer [not null, ref: > questions.id]
  content text [not null]
  is_correct boolean [not null]
}


Table submissions {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  exam_id integer [not null, ref: > exams.id]
  upload_time datetime [default: `CURRENT_TIMESTAMP`]
  grade real
  feedback text
}



Table schedule {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  title text [not null]
  description text
  type text
  event_date date [not null]
  start_time time
}


Table lessons_completed {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  lesson_id integer [not null, ref: > lessons.id]
  completed_at datetime [default: `CURRENT_TIMESTAMP`]
}

Table quizlet {
  id integer [pk, increment]
  lesson_id integer [not null, ref: > lessons.id]
  question text [not null]
  answer text [not null]
}
